Update Decision Tree(Fraud check)Assignment.ipynb

--- a/Decision Tree(Fraud check)Assignment.ipynb
+++ b/Decision Tree(Fraud check)Assignment.ipynb
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "fraud=pd.read_csv(\"C:\\\\Users\\\\ASUS\\\\Downloads\\\\DATA SCIENCE\\\\Aishwarya Data Science Assignment\\\\Decision tree\\\\Fraud_check.csv\")\n",
+    "fraud=pd.read_csv(\"C:\\\\Users\\\\ASUS\\\\Downloads\\\\DATA SCIENCE\\\\Decision tree\\\\Fraud_check.csv\")\n",
     "fraud.head()"
    ]
   },
