Update Decision Tree(Company Data)Assignment.ipynb

--- a/Decision Tree(Company Data)Assignment.ipynb
+++ b/Decision Tree(Company Data)Assignment.ipynb
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "company=pd.read_csv(\"C:\\\\Users\\\\ASUS\\\\Downloads\\\\DATA SCIENCE\\\\Aishwarya Data Science Assignment\\\\Decision tree\\\\Company_Data.csv\")\n",
+    "company=pd.read_csv(\"C:\\\\Users\\\\ASUS\\\\Downloads\\\\DATA SCIENCE\\\\Decision tree\\\\Company_Data.csv\")\n",
     "company.head()"
    ]
   },
